--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  align-content: flex-start;
   box-shadow: 0px 0px 20px 5px var(--bg-nav-color);
   grid-column: col-start / span main;
   grid-row: row-start / span row-end;
